clusters/scratch/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scratch
  labels:
    cloudlab.kerbaras.com/gateway-access: "true" # key 1 for the apiserver TLSRoute
